[css-grid] Remove the 2x computation of row sizes w/ indefinite heights

On crrev.com/358816, among other things, we added a second pass of the track
sizing algorithm for rows in order to properly compute row sizes when the
height was indefinite. We did that in order to have a symmetrical
implementation for columns and rows, but unfortunatelly that was not
correct.

Apart from issuing incorrect results in some cases it created a huge
performance issue in the case of nested grids because we were exponentially
increasing the amount of executions of the track sizing algorithm. The attached
performance test shows a 350% improvement with the patch.

BUG=619629

Review-Url: https://codereview.chromium.org/2339983002
Cr-Commit-Position: refs/heads/master@{#418892}

Former-commit-id: 7eeda9249ff7a744d713417830e4b71319879b87